Trata disparos de erros

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:cRTPsI/O1tQPCXSLcr316kikPFyieeK3LEMG+dOWbJM=
-APP_DEBUG=true
+APP_KEY=
+APP_DEBUG=false
 APP_URL="${APP_URL}"
 
 QUEUE_CONNECTION="${QUEUE_CONNECTION}"
